# pyproject.toml
# Questo file non è più usato per la gestione delle dipendenze (ora si usano requirements.txt e requirements-dev.txt)
# Può essere rimosso se non serve la build PEP 517.

[project]
name = "melodia"
version = "0.1.0"
description = "Audio playground project"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "numpy>=1.26.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.9",
    "isort>=5.12",
    "mypy>=1.5"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
